hphp/test/slow/type_structure/self-interface.php.expectf
Fatal error: when resolving type constant B2::T, class self does not have non-abstract type constant U in %s/self-interface.php on line 24
